--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 text-center test m-auto d-none d-lg-block">
+      <div class="col-lg-4 text-center border border-secondary bg-dark m-auto d-none d-lg-block">   
         <p class="h1 mb-3 pt-2">Deadpool</p>
         <img class="img-fluid mb-3" src="img/profil.jpg" alt="Photo de profil Deadpool">
         <p class="h3 mb-3">Super pouvoir : Sens de la répartie</p>
@@ -50,7 +50,8 @@
           <tbody>
             <tr class="centerText">
               <td width="10%" class="text-center"><img src="img/ironManMini.jpg" alt="Photo miniature de Iron Man" </td>
-              <td width="70%" class="h3">Iron Man</td>
+              <td width="70%" class="h3 d-none d-lg-table-cell">Iron Man</td>
+              <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Iron Man</td>
               <td width="20%" class="text-center"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#ironManModal">+d'infos</button>
                 <div class="modal fade" id="ironManModal" tabindex="-1" aria-labelledby="ironManModalLabel"
@@ -77,7 +78,8 @@
 
             <tr class="centerText">
               <td width="10%" class="text-center"><img src="img/captainAmericaMini.jpg" alt="Photo miniature de Captain America" </td>
-              <td width="70%" class="h3">Captain America</td>
+              <td width="70%" class="h3 d-none d-lg-table-cell">Captain America</td>
+              <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Captain America</td>
               <td width="20%" class="text-center"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#captainAmericaModal">+d'infos</button>
                 <div class="modal fade" id="captainAmericaModal" tabindex="-1" aria-labelledby="captainAmericaModalLabel"
@@ -104,7 +106,8 @@
 
             <tr class="centerText">
               <td width="10%" class="text-center"><img src="img/thorMini.jpg" alt="Photo miniature de Thor" </td>
-              <td width="70%" class="h3">Thor</td>
+              <td width="70%" class="h3 d-none d-lg-table-cell">Thor</td>
+              <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Thor</td>
               <td width="20%" class="text-center"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#thorModal">+d'infos</button>
                 <div class="modal fade" id="thorModal" tabindex="-1" aria-labelledby="thorModalLabel"
@@ -131,7 +134,8 @@
 
             <tr class="centerText">
               <td width="10%" class="text-center"><img src="img/hulkMini.jpg" alt="Photo miniature de Hulk" </td>
-              <td width="70%" class="h3">Hulk</td>
+              <td width="70%" class="h3 d-none d-lg-table-cell">Hulk</td>
+              <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Hulk</td>
               <td width="20%" class="text-center"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#hulkModal">+d'infos</button>
                 <div class="modal fade" id="hulkModal" tabindex="-1" aria-labelledby="hulkModalLabel"
@@ -158,7 +162,8 @@
 
             <tr class="centerText">
               <td width="10%" class="text-center"><img src="img/spidermanMini.jpg" alt="Photo miniature de Spiderman" </td>
-              <td width="70%" class="h3">Spiderman</td>
+              <td width="70%" class="h3 d-none d-lg-table-cell">Spiderman</td>
+              <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Spiderman</td>
               <td width="20%" class="text-center"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#spidermanModal">+d'infos</button>
                 <div class="modal fade" id="spidermanModal" tabindex="-1" aria-labelledby="spidermanModalLabel"
@@ -185,7 +190,8 @@
 
             <tr class="centerText">
               <td width="10%" class="text-center"><img src="img/doctorStrangeMini.jpg" alt="Photo miniature de Doctor Strange" </td>
-              <td width="70%" class="h3">Doctor Strange</td>
+              <td width="70%" class="h3 d-none d-lg-table-cell">Doctor Strange</td>
+              <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Doctor Strange</td>
               <td width="20%" class="text-center"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#doctorStrangeModal">+d'infos</button>
                 <div class="modal fade" id="doctorStrangeModal" tabindex="-1" aria-labelledby="doctorStrangeModalLabel"
@@ -212,7 +218,8 @@
 
             <tr class="centerText">
               <td width="10%" class="text-center"><img src="img/captainMarvelMini.jpg" alt="Photo miniature de Captain Marvel" </td>
-              <td width="70%" class="h3">Captain Marvel</td>
+              <td width="70%" class="h3 d-none d-lg-table-cell">Captain Marvel</td>
+              <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Captain Marvel</td>
               <td width="20%" class="text-center"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#captainMarvelModal">+d'infos</button>
                 <div class="modal fade" id="captainMarvelModal" tabindex="-1" aria-labelledby="captainMarvelModalLabel"
@@ -239,7 +246,8 @@
 
             <tr class="centerText">
               <td width="10%" class="text-center"><img src="img/grootMini.jpg" alt="Photo miniature de Baby Groot" </td>
-              <td width="70%" class="h3">Baby Groot</td>
+              <td width="70%" class="h3 d-none d-lg-table-cell">Baby Groot</td>
+              <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Baby Groot</td>
               <td width="20%" class="text-center"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#grootModal">+d'infos</button>
                 <div class="modal fade" id="grootModal" tabindex="-1" aria-labelledby="grootModalLabel"
@@ -266,7 +274,8 @@
 
             <tr class="centerText">
               <td width="10%" class="text-center"><img src="img/rocketMini.jpg" alt="Photo miniature de Rocket" </td>
-              <td width="70%" class="h3">Rocket</td>
+              <td width="70%" class="h3 d-none d-lg-table-cell">Rocket</td>
+              <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Rocket</td>
               <td width="20%" class="text-center"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#rocketModal">+d'infos</button>
                 <div class="modal fade" id="rocketModal" tabindex="-1" aria-labelledby="rocketModalLabel"
@@ -293,7 +302,8 @@
 
             <tr class="centerText d-lg-none d-md-block">
               <td width="10%" class="text-center"><img src="img/deadpoolMini.jpg" alt="Photo miniature de Deadpool" </td>
-              <td width="70%" class="h3">Deadpool</td>
+              <td width="70%" class="h3 d-none d-lg-table-cell">Deadpool</td>
+              <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Deadpool</td>
               <td width="20%" class="text-center"><button type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#deadpoolModal">+d'infos</button>
                 <div class="modal fade" id="deadpoolModal" tabindex="-1" aria-labelledby="deadpoolModalLabel"
