Contour carte Deadpool

--- a/index.html
+++ b/index.html
@@ -33,12 +33,27 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 text-center border border-secondary bg-dark m-auto d-none d-lg-block">   
-        <p class="h1 mb-3 pt-2">Deadpool</p>
+      <div class="col-lg-4 text-center m-auto d-none d-lg-block">
+        <table class="table table-bordered table-dark m-0 p-0">
+          <tr>
+            <td class="h1 mb-3 pt-2">Deadpool</td>
+          </tr>
+          <tr>
+            <td><img class="img-fluid mt-2 mb-2" src="img/profil.jpg" alt="Photo de profil Deadpool"></td>
+          </tr>
+          <tr>
+            <td>
+              <p class="h3 mb-3">Super pouvoir : Sens de la répartie</p>
+              <p class="h3 mb-3">Nom : Wade Wilson</p>
+              <p class="h3">Métier : Mercenaire</p>
+            </td>
+          </tr>
+        </table>
+        <!-- <p class="h1 mb-3 pt-2">Deadpool</p>
         <img class="img-fluid mb-3" src="img/profil.jpg" alt="Photo de profil Deadpool">
         <p class="h3 mb-3">Super pouvoir : Sens de la répartie</p>
         <p class="h3 mb-3">Nom : Wade Wilson</p>
-        <p class="h3 mb-3">Métier : Mercenaire</p>
+        <p class="h3 mb-3">Métier : Mercenaire</p> -->
       </div>
       <div class="col-lg-8">
         <table class="table table-bordered table-dark table-hover">
