--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
 </head>
 
 <body>
-  <header>
-      <div class="d-none d-lg-block mb-5">
-        <img class="w-100" src="img/avengers.jpg" alt="Bannière Avengers">
-        <nav class="navbar navbar-expand-lg navFont p-0">
-          <img class="widthLogolg m-auto" src="img/Logo.png" alt="Logo Marvel">
-        </nav>
-      </div>
-      <div class="d-lg-none d-md-block mb-4">
-        <img class="w-100" src="img/avengersMini.jpg" alt="Bannière Avengers">
-        <nav class="navbar navbar-expand-lg navFont p-0">
-          <img class="widthLogomd m-auto" src="img/Logo.png" alt="Logo Marvel">
-        </nav>
-      </div>
+  <header class="d-none d-lg-block mb-5">
+    <img class="w-100" src="img/avengers.jpg" alt="Bannière Avengers">
+    <nav class="navbar navbar-expand-lg navFont p-0">
+      <img class="widthLogolg m-auto" src="img/Logo.png" alt="Logo Marvel">
+    </nav>
+  </header>
+  <header class="d-lg-none d-md-block mb-4 sticky-top" aria-hidden="true">
+    <img class="w-100" src="img/avengersMini.jpg" alt="Bannière Avengers">
+    <nav class="navbar navbar-expand-lg navFont p-0">
+      <img class="widthLogomd m-auto" src="img/Logo.png" alt="Logo Marvel">
+    </nav>
   </header>
 
   <div class="container">
