Display table row on Deadpool

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               </td>
             </tr>
 
-            <tr class="centerText d-lg-none d-md-block">
+            <tr class="centerText d-lg-none d-md-table-row">
               <td width="10%" class="text-center"><img src="img/deadpoolMini.jpg" alt="Photo miniature de Deadpool" </td>
               <td width="70%" class="h3 d-none d-lg-table-cell">Deadpool</td>
               <td width="70%" class="h3 d-lg-none d-md-table-cell text-center">Deadpool</td>
